DiskTools/DiskInfo/AtaSmart.h

/// <summary>
/// AtaSmartInit，在获取数据时需要先调用一次
/// </summary>
/// <param name="useWmi"></param>
/// <param name="advancedDiskSearch"></param>
/// <param name="flagChangeDisk"></param>
/// <param name="workaroundHD204UI"></param>
/// <param name="workaroundAdataSsd"></param>
/// <param name="flagHideNoSmartDisk"></param>
/// <returns></returns>
extern "C" IMPORT_DLL void AtaSmartInit(BOOL useWmi, BOOL advancedDiskSearch, PBOOL flagChangeDisk, BOOL workaroundHD204UI, BOOL workaroundAdataSsd, BOOL flagHideNoSmartDisk) {
	CString m_Ini = _T("\\DiskInfo.ini");
	// USB/IEEE1394 Support
	SetDebugMode(1);

	INITCOMMONCONTROLSEX InitCtrls = { sizeof(INITCOMMONCONTROLSEX) };
	InitCtrls.dwICC = ICC_WIN95_CLASSES;
	InitCommonControlsEx(&InitCtrls);

	SetErrorMode(SEM_FAILCRITICALERRORS);

	CAtaSmart::get_instance().FlagUsbSat = !GetPrivateProfileInt(_T("USB"), _T("SAT"), 1, m_Ini);
	CAtaSmart::get_instance().FlagUsbIodata = !GetPrivateProfileInt(_T("USB"), _T("IODATA"), 1, m_Ini);
	CAtaSmart::get_instance().FlagUsbSunplus = !GetPrivateProfileInt(_T("USB"), _T("Sunplus"), 1, m_Ini);
	CAtaSmart::get_instance().FlagUsbLogitec = !GetPrivateProfileInt(_T("USB"), _T("Logitec"), 1, m_Ini);
	CAtaSmart::get_instance().FlagUsbProlific = !GetPrivateProfileInt(_T("USB"), _T("Prolific"), 1, m_Ini);
	CAtaSmart::get_instance().FlagUsbJmicron = !GetPrivateProfileInt(_T("USB"), _T("JMicron"), 1, m_Ini);
	CAtaSmart::get_instance().FlagUsbCypress = !GetPrivateProfileInt(_T("USB"), _T("Cypress"), 1, m_Ini);
	CAtaSmart::get_instance().FlagUsbASM1352R = !GetPrivateProfileInt(_T("USB"), _T("ASM1352R"), 1, m_Ini);
	CAtaSmart::get_instance().FlagUsbMemory = !GetPrivateProfileInt(_T("USB"), _T("UsbMemory"), 0, m_Ini);
	//	m_Ata.FlagUsbSat16 = !GetPrivateProfileInt(_T("USB"), _T("UsbSAT16"), 1, m_Ini);
	CAtaSmart::get_instance().FlagUsbNVMeJMicron = !GetPrivateProfileInt(_T("USB"), _T("NVMeJMicron"), 1, m_Ini);
	CAtaSmart::get_instance().FlagUsbNVMeASMedia = !GetPrivateProfileInt(_T("USB"), _T("NVMeASMedia"), 1, m_Ini);
	CAtaSmart::get_instance().FlagUsbNVMeRealtek = !GetPrivateProfileInt(_T("USB"), _T("NVMeRealtek"), 1, m_Ini);
	CAtaSmart::get_instance().FlagMegaRAID = !GetPrivateProfileInt(_T("Setting"), _T("MegaRAID"), 1, m_Ini);
	
	BOOL m_bAtaPassThroughSmart = (BOOL)GetPrivateProfileInt(_T("Setting"), _T("AtaPassThroughSmart"), 1, m_Ini);
	if (m_bAtaPassThroughSmart)
	{
		CAtaSmart::get_instance().SetAtaPassThroughSmart(TRUE);
	}
	else
	{
		CAtaSmart::get_instance().SetAtaPassThroughSmart(FALSE);
	}
	CAtaSmart::get_instance().CsmiType = GetPrivateProfileInt(_T("Setting"), _T("CsmiType"), CAtaSmart::get_instance().CSMI_TYPE_ENABLE_AUTO, m_Ini);
	CAtaSmart::get_instance().Init(useWmi, advancedDiskSearch, flagChangeDisk, workaroundHD204UI, workaroundAdataSsd, flagHideNoSmartDisk); 
	SelectDrive(0);
}
/// <summary>
/// 返回硬盘数，函数名待定
/// </summary>
/// <returns>int</returns>
extern "C" IMPORT_DLL int GetDriveNum() { return (int)CAtaSmart::get_instance().vars.GetCount(); }
/// <summary>
/// 返回值为字符串时的写法
/// CString
/// </summary>
/// <returns>字符串</returns>
extern "C" IMPORT_DLL wchar_t* GetFirmware() {
	CString cstrStr = CAtaSmart::get_instance().vars[selectedDrive].FirmwareRev;
	return cstrStr.AllocSysString();
}
extern "C" IMPORT_DLL wchar_t* GetFirmwareRev() {
	CString cstrStr = CAtaSmart::get_instance().vars[selectedDrive].FirmwareRev;
	return cstrStr.AllocSysString();
}
extern "C" IMPORT_DLL wchar_t* GetBufferSize() {
	CString m_BufferSize;
	if (CAtaSmart::get_instance().vars[selectedDrive].HostReads >= 0)
	{
		m_BufferSize.Format(_T("%d GB"), CAtaSmart::get_instance().vars[selectedDrive].HostReads);
	}
	else if (CAtaSmart::get_instance().vars[selectedDrive].BufferSize == 0xFFFF * 512)
	{
		m_BufferSize.Format(_T(">= 32 MB"));
	}
	else if (CAtaSmart::get_instance().vars[selectedDrive].BufferSize > 0)
	{
		m_BufferSize.Format(_T("%d KB"), CAtaSmart::get_instance().vars[selectedDrive].BufferSize / 1024);
	}
	else
	{
		m_BufferSize = _T("----");
	}
	return m_BufferSize.AllocSysString();
}
extern "C" IMPORT_DLL wchar_t* GetAtaAtapi() {
	CString m_AtaAtapi;
	if (!CAtaSmart::get_instance().vars[selectedDrive].MinorVersion.IsEmpty())
	{
		m_AtaAtapi = CAtaSmart::get_instance().vars[selectedDrive].MajorVersion + _T(" | ") + CAtaSmart::get_instance().vars[selectedDrive].MinorVersion;
	}
	else
	{
		m_AtaAtapi = CAtaSmart::get_instance().vars[selectedDrive].MajorVersion;
	}
	return m_AtaAtapi.AllocSysString();
}
extern "C" IMPORT_DLL wchar_t* GetFeature() {
	CString m_Feature;
	if (CAtaSmart::get_instance().vars[selectedDrive].IsSmartSupported)
	{
		m_Feature += _T("S.M.A.R.T., ");
	}

	if (CAtaSmart::get_instance().vars[selectedDrive].IsApmSupported)
	{
		m_Feature += _T("APM, ");
	}

	if (CAtaSmart::get_instance().vars[selectedDrive].IsAamSupported)
	{
		m_Feature += _T("AAM, ");
	}

	if (CAtaSmart::get_instance().vars[selectedDrive].IsNcqSupported)
	{
		m_Feature += _T("NCQ, ");
	}

	if (CAtaSmart::get_instance().vars[selectedDrive].IsTrimSupported)
	{
		m_Feature += _T("TRIM, ");
	}

	if (CAtaSmart::get_instance().vars[selectedDrive].IsDeviceSleepSupported)
	{
		m_Feature += _T("DevSleep, ");
	}

	if (CAtaSmart::get_instance().vars[selectedDrive].IsStreamingSupported)
	{
		m_Feature += _T("Streaming, ");
	}

	if (CAtaSmart::get_instance().vars[selectedDrive].IsGplSupported)
	{
		m_Feature += _T("GPL, ");
	}

	if (CAtaSmart::get_instance().vars[selectedDrive].IsVolatileWriteCachePresent)
	{
		m_Feature += _T("VolatileWriteCache, ");
	}
	if (!m_Feature.IsEmpty())
	{
		m_Feature.Delete(m_Feature.GetLength() - 2, 2);
	}

	if (CAtaSmart::get_instance().vars[selectedDrive].CommandType == CAtaSmart::get_instance().CMD_TYPE_AMD_RC2)
	{
		m_Feature = L"";
	}
	return m_Feature.AllocSysString();
}
extern "C" IMPORT_DLL wchar_t* GetDriveMap() {
	CString m_DriveMap = CAtaSmart::get_instance().vars[selectedDrive].DriveMap;
	return m_DriveMap.AllocSysString();
}
extern "C" IMPORT_DLL double GetCapacity() {
	return CAtaSmart::get_instance().vars[selectedDrive].TotalDiskSize;
}
extern "C" IMPORT_DLL DWORD GetDiskStatus() {
	return CAtaSmart::get_instance().vars[selectedDrive].DiskStatus;
}